# mser-cpp

./: CMakeLists.txt  README.md
docs/: algorithm.md  api.md  references.md
include/mser/: mser.h  steady_state_detector.h  types.h
src/: mser.cpp  steady_state_detector.cpp
